<resources>
    <string name="app_name">OrderItem</string>

    <string-array name="roels">
        <item>customer</item>
        <item>merchant</item>
    </string-array>
    <string name="customer">customer</string>
    <string name="merchant">merchant</string>
    <string name="title_home">Home</string>
    <string name="title_orders">Orders</string>
    <string name="title_additem">Add Item</string>
    <string name="title_profile">Profile</string>
    <string name="user_role">User role</string>
    <string name="hint_first_name">Enter first name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_email_address">Email address</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_phnumber">Phone number</string>
    <string name="btn_text_signup">sign up</string>
    <string name="btn_text_switch_to_signin">or sign in</string>
    <string name="btn_text_password_reset">Forgot password</string>
    <string name="btn_text_signin_with">sign in with</string>
    <string name="title_welcome">Welcome</string>
    <string name="hint_email_username">Email</string>
    <string name="btn_text_continue_learning">sign in</string>
    <string name="btn_text_switch_to_signup">or sign up</string>
    <string name="missing_fields">Please enter missing fileds</string>
    <string name="title_items">Items</string>
    <string name="hint_item_name">Enter item name</string>
    <string name="hint_price">Enter actual Price</string>
    <string name="hint_offer_price">Enter offer Price</string>
    <string name="hint_desc">Enter description</string>
    <string name="add_item">Add Item</string>
    <string name="error_item_name">Missing item name</string>
    <string name="error_item_desc">Missing item description</string>
    <string name="error_item_act_price">Missing actual price</string>
    <string name="error_item_offer_price">Missing offer price</string>
    <string name="error_price_more_error">Offer price more than actual price</string>
    <string name="take_photo">Take photo</string>
    <string name="gallery">Gallery</string>
    <string name="item_added">Item added succesfully</string>

    <string name="price">\u20B9%1$s</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="continue_shop">Continue shop</string>
    <string name="add_cart">Item added to cart</string>
    <string name="change_adr">Add or Change Address</string>
    <string name="price_details">Price Deatils</string>
    <string name="total_price">Total Amount</string>
    <string name="place_order">Place Order</string>
</resources>


