<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/form_lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true">


                <LinearLayout
                    android:id="@+id/item_lay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_item"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@color/colorPrimary"
                        android:elevation="3dp"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:id="@+id/txt_item_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/user_pic"
                        android:layout_marginTop="15dp"
                        android:gravity="center_horizontal"
                        android:text="Add item"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_name"
                    style="@style/EditText.EmailAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="22dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="fonts/Roboto-Light.ttf"
                    android:hint="@string/hint_item_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:selectAllOnFocus="true" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/edt_desc"
                style="@style/EditText.EmailAuth"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_border"
                android:fontFamily="fonts/Roboto-Light.ttf"
                android:hint="@string/hint_desc"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:selectAllOnFocus="true" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_actual_price"
                    style="@style/EditText.EmailAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="22dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="fonts/Roboto-Light.ttf"
                    android:hint="@string/hint_price"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:selectAllOnFocus="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_offer_price"
                    style="@style/EditText.EmailAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="22dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="fonts/Roboto-Light.ttf"
                    android:hint="@string/hint_offer_price"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:selectAllOnFocus="true" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_additem"
                style="@style/Button.Blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/form_lay"
                android:padding="15dp"
                android:text="@string/add_item"
                android:textAllCaps="false"
                android:textSize="@dimen/text_large"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>