<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.headrun.orderitem.customer.cart.CartActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/address_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:elevation="5dp"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/txt_user_name"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sujith" />

                <TextView
                    android:id="@+id/txt_user_adr"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="my adress" />

                <TextView
                    android:id="@+id/txt_user_phno"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="9019175770" />


                <TextView
                    android:id="@+id/btn_change_adr"
                    style="@style/Button.Blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorBottomNavigationPrimaryDark"
                    android:text="@string/change_adr"
                    android:textAllCaps="false"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold" />

            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address_lay" />

            <LinearLayout
                android:id="@+id/price_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address_lay"
                android:layout_margin="6dp"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/price_details"
                    android:textAllCaps="true" />

                <view
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorGrey400" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/txt_item_qty"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:padding="5dp"
                        android:text="@string/price"
                        android:textAllCaps="true" />

                    <TextView
                        android:id="@+id/txt_item_qty_price"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:padding="5dp"
                        android:text="@string/price"
                        android:textAllCaps="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:weightSum="1">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:padding="5dp"
                        android:text="@string/total_price"
                        android:textAllCaps="true" />

                    <TextView
                        android:id="@+id/txt_total_amount"
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:padding="5dp"
                        android:text="@string/price"
                        android:textAllCaps="true" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        style="@style/Button.Blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/place_order"
        android:textStyle="bold" />
</RelativeLayout>